app/stylesheets/typography/_typography.scss
/******************************

Enhanced Fonts for elements

******************************/
body {
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
  text-rendering: optimizeLegibility;
  }
.wf-active body {
  @include gesta;
  }
h1.title {
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  }
.wf-active h1,
.wf-active h2,
.wf-active h3,
.wf-active h4,
.wf-active h5,
.wf-active h6 {
  @include apertura-condensed; /* was gloriola */
  font-weight: 700;
  }
.block {
  background: $bookmark_red;
  color: #fff;
  @include apertura-condensed;
  float: left;
  font-size: 1.2em;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1em;
  padding: 0.3em .3em 0;
  text-transform: uppercase;
  }
#entries.show h2,
#entries.show h3,
#entries.show h4,
#entries.show h5,
#entries.show h6 { clear: both; }
a { color: $nytimes_blue; }
a:focus,
a:hover {
  color: darken($dark_blue_complement, 10%);
  text-decoration: none;
  }
p {
  color: #363636;  
  @include athelas;
  font-size: 1.2em;
  }  
#entries.show .body_column > ul {
  color: #363636;
  @include athelas;
  font-size: 1.2em;
  }  
#entries.show .body_column > ul li {
  background-position: left 8px;
  line-height: 1.5;
  }
#entries.show .body_column li p {
  font-size: 1em;
  line-height: 1.5;
  }

/******************************

TYPE CONTROLS

******************************/

.sans .body_column p,
#entries.show .sans .body_column > ul  {
  @include gesta;
  } 
  
/******************************

TITLE STYLES

******************************/

h1.title {
  background: image-url("header_bg.png") repeat-x scroll left top;
  color: #fff;
  clear: both;
  line-height: .9;
  font-size: 2.2em;
  font-weight: 700;
  height: 21px;
  letter-spacing: 0px;
  margin-bottom: 1em;
  }
h1.title span {
  background: #fff;
  color: $powder_blue;
  padding: 0 10px;
  margin: 0 25px 0 0;
  }
h1.title {
  margin-left: -999px;
  padding-left: 999px;
  text-align: right;
  }

/* stacked left words, big right word */

.title_bar,
#wordpress .widget-title {
  border-top: 3px solid $dark_blue;
  clear: both;
  color: $powder_blue;
  font-size: 2.3em;
  @include apertura-condensed;
  margin: 1em 0 1em;
  padding-top: 10px;
  text-transform: uppercase;
  }
#sidebar .title_bar {
  margin-top: 0;
  }
#modal .title_bar,
#exit_modal .title_bar,
#disclaimer_modal .title_bar {
  border-top: none;
  margin: 0;
  }  
div.title_bar {
  font-size: 1em;
  position: relative;
  }
div.title_bar h2 {
  @include apertura-condensed;
  }
div.title_bar h2 a {
  color: $powder_blue;
  }  
.title_bar .actions {
  position: absolute;
  right: 0;
  top: 0;
  }
.small_stack {
  color: $dark_blue;
  display: inline-block;
  font-size: .4em;
  line-height: 1em;
  margin-right: .5em;
  text-align: right;
  text-transform: uppercase;
  font-variant: small-caps;
  }
.small_stack span {
  display: block;
  }
.fr_section h1 {
  border-bottom: 2px solid $dark_grey;
  @include apertura-condensed;
  font-size: 1.5em;
  margin-bottom: .5em;
  text-transform: uppercase;
  }
.fr_section h1 a { color: $dark_grey; }
.fr_section h1 a:hover { color: darken($dark_blue_complement, 10%); }

/******************************

SIDEBAR

******************************/

#sidebar .title_bar,
#wordpress .widget-title {
  font-size: 1.5em;
  margin: 0 0 .5em;
  padding: .3em 0 0 0;
  }

/******************************

THREE COL LIST

******************************/

.three_col_list h3 {
  clear: both;
  font-size: 1.2em;
  line-height: 1.45;
  text-align: right;
  }

.comments .grouped_by_date .date {
  color: #bdbdbd;
  font-size: 1.3em;
  font-weight: 700;  
  line-height: 1.15;
  text-align: center;
}

.comments li a {
  line-height: 1.5;
  }

/******************************

ARTICLES

******************************/

.article h1 {
  font-size: 2em;
  line-height: 1.6;
  }

.featured .article h1,
#wordpress .blog_post_list h1 {
  font-size: 1.4em;
  font-weight: normal;
  line-height: 1.4;
  }
#entries h3,
#entries h4,
#entries h5,
#entries h6 {
  margin-top: 1em;
  }
.metadata {
  font-size: 1.3em;
  @include gesta;
  }
.articles_published_by_day h1 {
  font-size: 1.1em;
  }

/******************************

REGULATION VIEW

******************************/

.split_list dt {
  text-align: right;  
  }

/******************************

CITATION LIST

******************************/

.citation_count span {
  display: block;
  }

/******************************

BY DATE

******************************/

#entries.by_date h2 {
  margin-bottom: 0;
  margin-top: 1em;
  }
#entries.by_date h2:first-child,
#entries.by_date h2.firstchild {
  margin-top: 0;
  }  
#entries.by_date #main h3 {
  font-size: 1.2em;
  margin: .5em 0 .5em 1em;
  text-transform: uppercase;
  }
#entries.by_date #content_area dl,
#entries.by_date #content_area ul {
  font-size: 1.1em;
  margin-left: 2em;
  }
#entries.by_date ul {
  list-style: none;
  }
#entries.by_date dt > a {
  font-weight: normal;
  }
#entries.by_date .see {
  font-weight: 400;
  font-style: italic;
  }
#entries.by_date p.details {
  @include gesta; 
  font-size: .9em;
  font-weight: normal;
  margin-top: -.4em;
  }  
#entries.by_date .pages {
  font-style: italic;
  }
#entries.by_date .title_bar {
  font-size: .8em;
  margin-bottom: 1em;
  padding: 5px 5em 0 0;
  position: relative;
  text-transform: none;
  }
#entries.by_date .back_to_top {
  font-size: 1em;
  position: absolute;
  right: 0;
  text-transform: none;
  top: 0;  
  }  
.count_pill {
  background: lighten(#B3C2CF, 10%);
  @include border-radius(5px);
  font-size: 11px;
  padding: 0 .5em;
  text-align: center;
  width: 17px;
  }

/******************************

STATIC PAGES

******************************/ 
#pages #content_area h1 {
  border-top: 2px solid #464646;
  @include athelas;
  margin: 1em 0 .5em;
  }
#pages #content_area h1:first-child,
#pages #content_area h1.firstchild {
  border-top: none;
  margin-top: 0;
  }  
#pages #content_area h2 {
  color: #464646;
  margin: .5em 0 0;
  }
#pages #content_area ul.bullets {
  @include athelas;
  font-size: 1.2em;
  }
#pages #content_area ul.bullets li {
  background-position: left 8px;
  line-height: 1.5;
  }
#pages #content_area ul.bullets li strong {
  text-transform: uppercase;
  }
#pages #content_area ul.bullets li ul {
  margin-top: 0.75em;
  }  
#pages #content_area .aside_box {
  margin-bottom: 1em;
  }  

